# raytracing

./: CMakeLists.txt  README.md
include/: camera.h  dielectric.h  float_def.h  hitable.h  hitable_list.h  lambertian.h  material.h  metal.h  random_gen.h  random_utils.h  ray_utils.h  sphere.h
include/math/: ray.h  vec3.h
src/: CMakeLists.txt  dielectric.cpp  hitable_list.cpp  lambertian.cpp  main.cpp  metal.cpp  random_utils.cpp  sphere.cpp
test/: CMakeLists.txt  vec3_tests.cpp
